k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: budgetmate

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata: 
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kajol1288/budgetmate-frontend:latest
          ports:
            - containerPort: 80
          
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
